--- a/utils/xprof.sh.erb.in
+++ b/utils/xprof.sh.erb.in
@@ -23,6 +23,7 @@ display_help() {
     echo "  -e, --extended     Print information for each Hostname / Process / Thread / Device"
     echo "  -t, --trace        Display the trace"
     echo "  -l, --line         Dump the timeline"
+    echo "  -m, --mangle       Display mangled name"
     echo "  -a, --asm          Dump in your current directory low level kernels informations (asm,isa,visa,...)."
     echo "  -r, --replay       <application> <application-arguments> will be traited as pathes to traces folders ($HOME/lttng-traces/...)"
     echo "                     If no arguments are provided, will use the latest trace available"
@@ -206,7 +207,7 @@ summary() {
     ocl_output=$(babeltrace2 --plugin-path=$libdir \
                              ${lttng_last_session} \
                              --component=filter.clinterval.interval \
-                             --component=sink.xprof.tally --params="display=$display,name=demangle")
+                             --component=sink.xprof.tally --params="display=$display,name=$mangling")
     if [ -n "$ocl_output" ]; then
         echo "== OpenCL == "
         echo "$ocl_output"
@@ -216,7 +217,7 @@ summary() {
     ze_output=$(babeltrace2 --plugin-path=$libdir \
                             ${lttng_last_session} \
                             --component=filter.zeinterval.interval \
-                            --component=sink.xprof.tally --params="display=$display,name=demangle")
+                            --component=sink.xprof.tally --params="display=$display,name=$mangling")
     if [ -n "$ze_output" ]; then
         echo "== Level0 == "
         echo "$ze_output"
@@ -226,7 +227,7 @@ summary() {
     cuda_output=$(babeltrace2 --plugin-path=$libdir \
                               ${lttng_last_session} \
                               --component=filter.cudainterval.interval \
-                              --component=sink.xprof.tally --params="display=$display,name=demangle")
+                              --component=sink.xprof.tally --params="display=$display,name=$mangling")
     if [ -n "$cuda_output" ]; then
         echo "== CUDA == "
         echo "$cuda_output"
@@ -239,6 +240,8 @@ summary() {
 # |  (_| | _> | | | (_|   /--\ | (_| \/
 #                    _|           _|
 display="compact";
+mangling="demangle";
+
 if [ "$#" -eq 0 ]; then
     display_help
 fi
@@ -252,6 +255,7 @@ while (( "$#" )); do
         -a | --asm)      shift; asm=true ;;
         -t | --trace)    shift; trace=true ;;
         -l | --timeline) shift; timeline=true ;;
+        -m | --mangle)   shift; mangling="mangle" ;;
         --)              shift; break ;;
         *)               break  ;;
     esac
