--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -335,7 +335,8 @@ CLEANFILES += \
 INTERVAL_DUST_FILES = \
 	tests/interval_API_call.dust \
 	tests/interval_profiling_normal.dust \
-	tests/interval_profiling_block.dust
+	tests/interval_profiling_block.dust \
+	tests/interval_profiling_fast.dust 
 
 $(INTERVAL_DUST_FILES): tests/interval_%.dust: tests/interval.dust.erb
 	$(ERB) namespace="$@" $(srcdir)/tests/interval.dust.erb > $@
@@ -347,9 +348,11 @@ TRACE_FILES = \
 	tests/API_call.yaml \
 	tests/profiling_normal.yaml \
 	tests/profiling_block.yaml \
+	tests/profiling_fast.yaml \
 	tests/interval_API_call.yaml \
 	tests/interval_profiling_normal.yaml \
-	tests/interval_profiling_block.yaml
+	tests/interval_profiling_block.yaml \
+	tests/interval_profiling_fast.yaml 
 
 CLEANFILES += \
 	tests/ze_dummy_trace.yaml \
