--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -336,7 +336,8 @@ INTERVAL_DUST_FILES = \
 	tests/interval_API_call.dust \
 	tests/interval_profiling_normal.dust \
 	tests/interval_profiling_block.dust \
-	tests/interval_profiling_fast.dust 
+	tests/interval_profiling_fast.dust \
+	tests/interval_profiling_interleave_process.dust
 
 $(INTERVAL_DUST_FILES): tests/interval_%.dust: tests/interval.dust.erb
 	$(ERB) namespace="$@" $(srcdir)/tests/interval.dust.erb > $@
@@ -349,10 +350,12 @@ TRACE_FILES = \
 	tests/profiling_normal.yaml \
 	tests/profiling_block.yaml \
 	tests/profiling_fast.yaml \
+	tests/profiling_interleave_process.yaml \
 	tests/interval_API_call.yaml \
 	tests/interval_profiling_normal.yaml \
 	tests/interval_profiling_block.yaml \
-	tests/interval_profiling_fast.yaml 
+	tests/interval_profiling_fast.yaml \
+	tests/interval_profiling_interleave_process.yaml
 
 CLEANFILES += \
 	tests/ze_dummy_trace.yaml \
