--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -3,7 +3,7 @@
 bin_SCRIPTS = iprof 
 
 iprof: $(top_builddir)/utils/xprof.sh.erb
-	$(ERB) -T 1 languages=["opencl","ze"] $(top_builddir)/utils/xprof.sh.erb  > $@
+	$(ERB) -T 1 languages=["opencl","ze","cuda"] $(top_builddir)/utils/xprof.sh.erb  > $@
 	chmod a+x $@
 
 tally_utils.hpp: tally_utils.hpp.erb
