Added metadata dumping tool.

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -12,7 +12,32 @@ lttng/tracepoint_gen.h: $(srcdir)/tracepoint_gen.rb
 xprof_utils.h: $(srcdir)/xprof_utils.h.erb
 	$(ERB) $(srcdir)/xprof_utils.h.erb > xprof_utils.h
 
-CLEANFILES = lttng/tracepoint_gen.h xprof_utils.h
+LTTNG_FLAGS=-fPIC -Wall -Wextra -Wno-unused-parameter -Wno-type-limits -Wno-sign-compare -Werror -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I./
+
+%.h %.c: %.tp lttng/tracepoint_gen.h
+	$(LTTNG_GEN_TP) $< -o $*.c -o $*.h
+
+BUILT_SOURCES = \
+	thapi_metadata_tracepoints.h \
+	thapi_metadata_tracepoints.c
+
+thapi_metadata_SOURCES = \
+	thapi_metadata.c
+
+nodist_thapi_metadata_SOURCES = \
+	thapi_metadata_tracepoints.h \
+	thapi_metadata_tracepoints.c
+
+thapi_metadata_CFLAGS = $(LTTNG_FLAGS) $(LTTNG_UST_CFLAGS)
+thapi_metadata_LDFLAGS = $(LTTNG_UST_LIBS)
+
+bin_PROGRAMS = thapi_metadata
+
+CLEANFILES = \
+	lttng/tracepoint_gen.h \
+	xprof_utils.h \
+	$(BUILT_SOURCES)
+
 EXTRA_DIST = \
 	LTTng.rb \
 	tracepoint_gen.rb \
@@ -24,4 +49,5 @@ EXTRA_DIST = \
 	bt_plugins/comparator.rb \
 	xprof_utils.h.erb \
 	gen_babeltrace_dispatchers.rb \
-	gen_babeltrace_callbacks.rb
+	gen_babeltrace_callbacks.rb \
+	thapi_metadata_tracepoints.tp
