--- a/ze/tests/profiling_block.yaml
+++ b/ze/tests/profiling_block.yaml
@@ -21,8 +21,8 @@
     vtid: 1
   :payload:
     hEvent: 12
-    contextStart: 2
-    contextEnd: 10
+    globalStart: 2
+    globalEnd: 10
 - :name: lttng_ust_ze_profiling:event_profiling
   :payload:
     hEvent: 12
