--- a/opencl/supported_enums.yaml
+++ b/opencl/supported_enums.yaml
@@ -48,6 +48,6 @@
 - name: cl_kernel_sub_group_info
 - name: cl_device_atomic_capabilities
 - name: cl_device_partition_property_ext
-- name: cl_device_affinity_domain_ext
+- name: cl_affinity_domain_ext
 - name: cl_mem_migration_flags_ext
 - name: cl_device_unified_shared_memory_capabilities_intel
